--- a/style.css
+++ b/style.css
@@ -1,57 +1,92 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Manrope', sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Manrope", sans-serif;
 }
-:root{
-    --ligh-cyan:hsl(193, 38%, 86%);
-    --neon-green:hsl(150, 100%, 66%);
-    --grayish-blue:hsl(217, 19%, 38%);
-    --dark-grayish-blue:hsl(217, 19%, 24%);
-    --dark-blue:hsl(218, 23%, 16%);
+:root {
+  --ligh-cyan: hsl(193, 38%, 86%);
+  --neon-green: hsl(150, 100%, 66%);
+  --grayish-blue: hsl(217, 19%, 38%);
+  --dark-grayish-blue: hsl(217, 19%, 24%);
+  --dark-blue: hsl(218, 23%, 16%);
 }
-.content_wrapper{
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--dark-blue);
+.content_wrapper {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--dark-blue);
 }
-.container{
-    width: 450px;
-    max-width: 95%;
-    background-color: var(--dark-grayish-blue);
-    border-radius: 8px;
-    padding: 25px;
-    text-align: center;
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 35rem;
+  max-width: 95%;
+  background-color: var(--dark-grayish-blue);
+  border-radius: 10px;
+  padding: 2.2rem;
+  text-align: center;
 }
-.partitionImage img{
-    width: 100%;
+.container span {
+  font-size: 18px;
+  word-spacing: 0.5rem;
+  text-transform: uppercase;
+  color: var(--neon-green);
+  margin-bottom: 1rem;
 }
-.dicebtn{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#adviceId {
+  font-size: 18px;
+  margin-left: 0.3rem;
+  letter-spacing: 3px;
 }
-.btn{
-    border: none;
-    border-radius: 50%;
-    padding: 20px;
-    margin-top: -50px;
-    background-color: var(--neon-green);
-    cursor: pointer;
+.generatedAdvice {
+  width: 100%;
+  height: 6rem;
+  font-size: 24px;
+  color: var(--ligh-cyan);
+  margin-top: 0.5rem;
+  margin-bottom: 2rem;
 }
-.btn img{
-    margin:0 auto 0 auto;
+.partitionImage {
+  width: 100%;
+  margin: 1.5rem 0;
 }
-.btn:hover{
-    box-shadow: 0 0 25px 8px var(--neon-green);
-    transition: box-shadow 0.1s ease;
+.partitionImage img {
+  width: 100%;
+}
+.dicebtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.btn {
+  border: none;
+  border-radius: 50%;
+  padding: 20px;
+  margin-top: -50px;
+  background-color: var(--neon-green);
+  cursor: pointer;
+}
+.btn img {
+  margin: 2px 2px 0 2px;
+}
+.btn:hover {
+  box-shadow: 0 0 2rem var(--neon-green);
+  transition: box-shadow 0.1s ease;
 }
 
+/* adding media queries for responsive design */
 
-
-
+@media screen and (max-width: 500px) {
+  .generatedAdvice{
+    height: auto;
+    font-size: 22px;
+  }
+  #divider {
+    content: url("./images/pattern-divider-mobile.svg");
+  }
+}
